kahi far great changes naiet :p

--- a/WebRoot/css/new1.css
+++ b/WebRoot/css/new1.css
@@ -1,5 +1,5 @@
 .header img {
-  	background-color:#47AB69;
+  	background-color:#2EB8E6;
 	float: left;
   	width:6%;
   	height: 11%;
@@ -10,7 +10,7 @@
 	z-index:1;
 }
 .header h1 {
-  	background-color:#47AB69;
+  	background-color:#2EB8E6;
 	text-align:center;
   	padding:5px;
 	height:75px;
@@ -20,11 +20,11 @@
 	width:100%;
 }
 #header {
-    background-color:#47AB69;
+    background-color:#2EB8E6;
     text-align:center;
 }
 #footer {
-    background-color:#47AB69;
+    background-color:#2EB8E6;
     clear:both;
     text-align:center;
    	padding:5px;
